tests/typing/bad/testfile-duplicate-4.go
package main

import "fmt"
func foo() { var x int; fmt.Print(x); var x int; fmt.Print(x); }
func main() {}
